--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">\>
+<html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -17,58 +17,60 @@
   <link rel="icon" href="/favicon.ico" />
   <style>
     :root{
-      --nf-blue:#2563eb;--nf-blue-dark:#1e3a8a;--nf-header:#1e40af;--nf-gray-50:#f9fafb;--nf-gray-100:#f3f4f6;--nf-text:#2d2d2d;--nf-muted:#475569;--nf-border:#e5e7eb;--radius:14px;--shadow:0 8px 24px rgba(0,0,0,.08);--maxw:1180px
+      --nf-blue:#2563eb;--nf-blue-dark:#1e3a8a;--nf-header:#1e40af;--nf-bg:#ffffff;--nf-surface:#ffffff;--nf-text:#1f2937;--nf-muted:#475569;--nf-border:#e5e7eb;--nf-soft:#f8fafc;--radius:16px;--shadow:0 10px 30px rgba(2,6,23,.08);--maxw:1040px
     }
     *,*::before,*::after{box-sizing:border-box}
-    html{scroll-behavior:smooth}
-    body{margin:0;background:#fff;color:var(--nf-text);font-family:"Poppins","Segoe UI",Roboto,Arial,sans-serif;line-height:1.6}
+    html{scroll-behavior:smooth;text-size-adjust:100%}
+    body{margin:0;background:var(--nf-bg);color:var(--nf-text);font-family:"Poppins","Segoe UI",Roboto,Arial,sans-serif;line-height:1.7}
     a{color:inherit;text-decoration:none}
     img{max-width:100%;height:auto;display:block}
+    p{max-width:68ch;text-wrap:pretty}
+    h1,h2,h3{line-height:1.2;text-wrap:balance}
 
     /* Topbar */
-    .topbar{position:sticky;top:0;z-index:1000;display:flex;align-items:center;justify-content:center;height:72px;background:var(--nf-header);color:#fff;box-shadow:0 2px 10px rgba(0,0,0,.07)}
+    .topbar{position:sticky;top:0;z-index:1000;display:flex;align-items:center;justify-content:center;height:72px;background:var(--nf-header);color:#fff;box-shadow:0 2px 10px rgba(0,0,0,.06)}
     .topbar h1{margin:0;font-family:"Montserrat","Segoe UI",Roboto,Arial,sans-serif;font-weight:700;letter-spacing:.3px}
 
     /* Layout */
     .content{padding:32px 20px}
     .container{max-width:var(--maxw);margin:0 auto}
+    section{margin:40px 0}
 
-    /* HERO */
-    .hero{position:relative;border-radius:20px;padding:48px 28px;background:radial-gradient(1200px 400px at 10% -10%, #eef2ff 0, transparent 55%),radial-gradient(900px 400px at 90% 0%, #e0f2fe 0, transparent 55%),linear-gradient(#fff,#fff)}
-    .hero .eyebrow{display:inline-flex;align-items:center;gap:8px;background:#eef2ff;border:1px solid #dbeafe;color:#3730a3;padding:6px 10px;border-radius:999px;font-size:12px;font-weight:700;letter-spacing:.3px;text-transform:uppercase}
-    .hero h2{font-size:clamp(28px,5vw,44px);margin:10px 0 6px}
-    .hero p.lead{font-size:18px;color:#475569;max-width:820px}
-    .pillnav{display:flex;gap:10px;flex-wrap:wrap;margin:14px 0 0}
+    /* Hero modernizado */
+    .hero{position:relative;border-radius:24px;padding:54px 28px;background:
+      radial-gradient(1200px 400px at 10% -10%, #eef2ff 0, transparent 55%),
+      radial-gradient(900px 400px at 90% 0%, #e0f2fe 0, transparent 55%),
+      linear-gradient(#fff,#fff);
+      border:1px solid var(--nf-border);box-shadow:var(--shadow)}
+    .eyebrow{display:inline-flex;align-items:center;gap:8px;background:#eef2ff;border:1px solid #dbeafe;color:#3730a3;padding:6px 10px;border-radius:999px;font-size:12px;font-weight:700;letter-spacing:.3px;text-transform:uppercase}
+    .hero h2{font-size:clamp(30px,5.4vw,48px);margin:12px 0 8px}
+    .lead{font-size:18px;color:var(--nf-muted)}
+    .pillnav{display:flex;gap:10px;flex-wrap:wrap;margin:16px 0 0}
     .pillnav a{display:inline-flex;align-items:center;gap:8px;padding:10px 12px;border-radius:999px;border:1px solid var(--nf-border);background:#fff;color:#111827;font-weight:600}
     .pillnav a:hover{box-shadow:0 6px 16px rgba(0,0,0,.06);transform:translateY(-1px)}
-    .hero-cta{display:flex;gap:10px;flex-wrap:wrap;margin-top:16px}
+    .hero-cta{display:flex;gap:10px;flex-wrap:wrap;margin-top:18px}
 
     /* Buttons */
-    .btn{display:inline-flex;align-items:center;gap:8px;border:none;padding:12px 18px;border-radius:10px;font-weight:700;cursor:pointer;transition:transform .15s ease,filter .2s ease,box-shadow .2s}
+    .btn{display:inline-flex;align-items:center;gap:8px;border:none;padding:12px 18px;border-radius:12px;font-weight:700;cursor:pointer;transition:transform .15s ease,filter .2s ease,box-shadow .2s}
     .btn:focus{outline:2px solid #93c5fd;outline-offset:2px}
-    .btn-primary{background:linear-gradient(90deg,var(--nf-blue),var(--nf-blue-dark));color:#fff;box-shadow:0 8px 22px rgba(37,99,235,.25)}
+    .btn-primary{background:linear-gradient(90deg,var(--nf-blue),var(--nf-blue-dark));color:#fff;box-shadow:0 8px 22px rgba(37,99,235,.20)}
     .btn-primary:hover{transform:translateY(-1px);filter:saturate(110%)}
     .btn-ghost{background:#fff;border:1px solid var(--nf-border);color:#111827}
 
-    /* Benefit Tips */
-    .benefit-tip{margin:16px 0;background:#f8fafc;border:1px dashed var(--nf-border);color:#0f172a;padding:12px 14px;border-radius:12px;font-weight:700;display:flex;align-items:center;gap:10px}
-    .benefit-tip small{font-weight:600;color:#334155}
+    /* Divisores/Callouts (benefícios) */
+    .callout{display:flex;align-items:center;gap:10px;margin:22px 0;padding:14px 16px;background:linear-gradient(180deg,#f8fafc,#ffffff);border:1px dashed var(--nf-border);border-radius:14px;font-weight:700;color:#0f172a}
+    .callout small{font-weight:600;color:#334155}
+    .divider{display:block;height:1px;background:linear-gradient(to right,transparent,#e5e7eb,transparent);margin:34px 0}
 
-    /* KPIs */
-    .kpis{display:grid;grid-template-columns:repeat(3,1fr);gap:14px;margin-top:18px}
-    .kpi{background:#fff;border:1px solid var(--nf-border);border-radius:16px;padding:16px;box-shadow:var(--shadow);display:flex;align-items:center;gap:12px}
-    .kpi .num{font-size:28px;font-weight:800;color:var(--nf-blue)}
-
-    /* Cards & grids */
+    /* Grids e Cards */
     .grid{display:grid;gap:16px}
-    .cols-3{grid-template-columns:repeat(3,1fr)}
-    .card{background:#fff;padding:18px;border-radius:16px;border:1px solid var(--nf-border);box-shadow:var(--shadow);transition:transform .15s ease,box-shadow .2s}
+    .cols-auto{grid-template-columns:repeat(auto-fit,minmax(260px,1fr))}
+    .card{background:var(--nf-surface);padding:20px;border-radius:18px;border:1px solid var(--nf-border);box-shadow:var(--shadow);transition:transform .15s ease,box-shadow .2s}
     .card:hover{transform:translateY(-2px);box-shadow:0 16px 32px rgba(0,0,0,.08)}
-    h3{margin:0 0 6px}
-    .lead{font-size:18px;color:#475569}
+    .card h3{margin:0 0 8px}
 
     /* Strip / Pricing */
-    .strip{display:flex;gap:16px;align-items:center;justify-content:space-between;background:linear-gradient(90deg,rgba(37,99,235,.10),rgba(30,58,138,.10));border:1px solid var(--nf-border);border-radius:16px;padding:18px}
+    .strip{display:flex;gap:16px;align-items:center;justify-content:space-between;background:linear-gradient(90deg,rgba(37,99,235,.08),rgba(30,58,138,.08));border:1px solid var(--nf-border);border-radius:18px;padding:18px}
     .price{font-weight:800;color:#111827}
 
     /* FAQ */
@@ -79,11 +81,6 @@
     summary:after{content:"+";float:right;color:#94a3b8}
     details[open] summary:after{content:"−"}
 
-    /* Helpers */
-    .chips{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px}
-    .chip{display:inline-block;background:#eef2ff;color:#3730a3;border:1px solid #e0e7ff;padding:6px 10px;border-radius:999px;font-size:12px;font-weight:700}
-    section{margin:28px 0}
-
     /* FAB WhatsApp */
     .fab{position:fixed;right:20px;bottom:20px;z-index:999;display:inline-flex;align-items:center;gap:8px;background:linear-gradient(135deg,#25D366,#128C7E);color:#fff;padding:12px 16px;border-radius:999px;box-shadow:0 12px 30px rgba(0,0,0,.18);font-weight:800}
     .fab:hover{transform:translateY(-1px)}
@@ -91,15 +88,12 @@
     /* Back to top */
     #totop{position:fixed;right:20px;bottom:78px;display:none;background:#111827;color:#fff;border:none;border-radius:999px;padding:10px 12px;font-weight:800;box-shadow:0 8px 22px rgba(0,0,0,.2)}
 
-    /* Mobile */
+    /* Mobile refinements */
     @media (max-width: 960px){
-      .cols-3{grid-template-columns:1fr}
-      .kpis{grid-template-columns:1fr}
-      .hero{padding:28px 20px}
+      .hero{padding:36px 20px}
+      .content{padding:24px 16px}
     }
-    @media (prefers-reduced-motion: reduce){
-      *{transition:none!important}
-    }
+    @media (prefers-reduced-motion: reduce){ *{transition:none!important} }
   </style>
   <script type="application/ld+json">
   {"@context":"https://schema.org","@type":"SoftwareApplication","name":"NewsFlow","url":"https://www.newsflow.com.br/","applicationCategory":"BusinessApplication","operatingSystem":"Web, Windows, macOS, Linux, iOS, Android","description":"Sistema de redação e telejornal de baixo custo para pequenas TVs e webTVs. Fluxo de telejornal, laudas, espelhos, TP, controle de programas ao vivo e integração com OBS/vMix.","offers":{"@type":"Offer","price":"Sob consulta","priceCurrency":"BRL"}}
@@ -118,13 +112,6 @@
         <span class="eyebrow">Lançamento em breve</span>
         <h2 id="tit-sobre">Redação e Telejornal em Tempo Real</h2>
         <p class="lead">O NewsFlow organiza o fluxo do telejornal, laudas, espelhos e TP, com controle de programas ao vivo e integração com OBS e vMix — ideal para pequenas TVs e webTVs que precisam de <strong>versatilidade e baixo custo</strong>.</p>
-        <div class="chips" aria-label="Diferenciais">
-          <span class="chip">💰 Baixo custo</span>
-          <span class="chip">📺 Ao vivo</span>
-          <span class="chip">🗂️ Laudas & Espelhos</span>
-          <span class="chip">🔌 OBS & vMix</span>
-          <span class="chip">📱 Mobile & 💻 Desktop</span>
-        </div>
         <div class="pillnav" role="navigation" aria-label="Atalhos">
           <a href="#recursos">Recursos</a>
           <a href="#integracoes">Integrações</a>
@@ -135,43 +122,26 @@
           <a class="btn btn-primary" href="#contato">Solicitar demonstração</a>
           <a class="btn btn-ghost" href="#aviso">Ser avisado no lançamento</a>
         </div>
-
-        <div class="kpis" aria-label="Destaques">
-          <div class="kpi"><span class="num">01</span><div><strong>Fluxo completo</strong><br/>Laudas, espelhos e PDFs</div></div>
-          <div class="kpi"><span class="num">02</span><div><strong>Ao vivo</strong><br/>Contagem de VTs & timers</div></div>
-          <div class="kpi"><span class="num">03</span><div><strong>Integrações</strong><br/>OBS & vMix (GC/Telas)</div></div>
-        </div>
-        <div class="benefit-tip">✨ <span>Menos retrabalho, mais <strong>tempo no ar</strong>.</span></div>
+        <div class="callout">✨ <span>Menos retrabalho, mais <strong>tempo no ar</strong>.</span></div>
       </section>
 
-      <div class="benefit-tip">🧠 <span>Centralize sua produção: abandone planilhas e ganhe <strong>agilidade na redação</strong>.</span></div>
+      <span class="divider" aria-hidden="true"></span>
 
       <!-- RECURSOS -->
       <section id="recursos" aria-labelledby="tit-recursos">
         <h2 id="tit-recursos">Feito para redações ágeis</h2>
         <p class="lead">Colaboração em tempo real, impressão em PDF e integrações para ir ao ar sem estresse.</p>
-        <div class="grid cols-3" style="margin-top:10px">
-          <div class="card"><h3>Fluxo de Telejornal</h3><p>Crie e organize <strong>laudas</strong>, <strong>espelhos</strong> e blocos com tempos, status e PDF.</p></div>
-          <div class="benefit-tip">⚡ <small>Organize tudo em um só lugar e <strong>ganhe velocidade</strong>.</small></div>
-
-          <div class="card"><h3>Operação de TP</h3><p>Teleprompter integrado, controle por teclado, timers e conforto visual.</p></div>
-          <div class="benefit-tip">🎯 <small>Mais segurança no ar e <strong>menos improviso</strong>.</small></div>
-
-          <div class="card"><h3>Ao vivo</h3><p>Contagem de VTs, sincronia entre redação e estúdio e visão do espelho.</p></div>
-          <div class="benefit-tip">📡 <small>Sua equipe entra no ritmo do <strong>ao vivo</strong> com menos stress.</small></div>
-
-          <div class="card"><h3>Integrações</h3><p>Exporta GC/espelho (JSON, CSV, PDF) para <strong>OBS</strong> e <strong>vMix</strong>.</p></div>
-          <div class="benefit-tip">🔌 <small>Reduza erros de GC com <strong>exportação direta</strong>.</small></div>
-
-          <div class="card"><h3>Multi‑dispositivo</h3><p>Funciona bem em celular, tablet e desktop — no estúdio ou em externa.</p></div>
-          <div class="benefit-tip">📱 <small>Trabalhe no que você já tem: <strong>sem compras caras</strong>.</small></div>
-
-          <div class="card"><h3>Licenciamento Acessível</h3><p>Implantação simples para emissoras enxutas e projetos independentes.</p></div>
-          <div class="benefit-tip">💸 <small>Pague menos e mantenha o <strong>essencial</strong> para o ar.</small></div>
+        <div class="grid cols-auto" style="margin-top:14px">
+          <div class="card"><h3>Fluxo de Telejornal</h3><p>Crie e organize <strong>laudas</strong>, <strong>espelhos</strong> e blocos com tempos, status e PDF.</p><div class="callout"><small>⚡ Organize tudo em um só lugar e <strong>ganhe velocidade</strong>.</small></div></div>
+          <div class="card"><h3>Operação de TP</h3><p>Teleprompter integrado, controle por teclado, timers e conforto visual.</p><div class="callout"><small>🎯 Mais segurança no ar e <strong>menos improviso</strong>.</small></div></div>
+          <div class="card"><h3>Ao vivo</h3><p>Contagem de VTs, sincronia entre redação e estúdio e visão do espelho.</p><div class="callout"><small>📡 Ritmo do <strong>ao vivo</strong> com menos stress.</small></div></div>
+          <div class="card"><h3>Integrações</h3><p>Exporta GC/espelho (JSON, CSV, PDF) para <strong>OBS</strong> e <strong>vMix</strong>.</p><div class="callout"><small>🔌 Reduza erros de GC com <strong>exportação direta</strong>.</small></div></div>
+          <div class="card"><h3>Multi‑dispositivo</h3><p>Funciona bem em celular, tablet e desktop — no estúdio ou em externa.</p><div class="callout"><small>📱 Trabalhe no que você já tem: <strong>sem compras caras</strong>.</small></div></div>
+          <div class="card"><h3>Licenciamento Acessível</h3><p>Implantação simples para emissoras enxutas e projetos independentes.</p><div class="callout"><small>💸 Pague menos e mantenha o <strong>essencial</strong>.</small></div></div>
         </div>
       </section>
 
-      <div class="benefit-tip">🚀 <span>Integre suas artes e <strong>vá ao ar mais rápido</strong>.</span></div>
+      <span class="divider" aria-hidden="true"></span>
 
       <!-- INTEGRAÇÕES -->
       <section id="integracoes" aria-labelledby="tit-integracoes">
@@ -182,11 +152,11 @@
             <li><strong>vMix</strong>: export de GC e cenas a partir do espelho.</li>
             <li><strong>JSON/CSV/PDF</strong>: interoperabilidade simples com outros fluxos.</li>
           </ul>
+          <div class="callout" style="margin-top:14px">🧩 <span>Conecte-se ao seu pipeline atual <strong>sem refazer tudo do zero</strong>.</span></div>
         </div>
-        <div class="benefit-tip">🧩 <span>Conecte-se ao seu pipeline atual <strong>sem refazer tudo do zero</strong>.</span></div>
       </section>
 
-      <div class="benefit-tip">💼 <span>Planos sob medida: <strong>pague pelo que usar</strong>, sem surpresas.</span></div>
+      <span class="divider" aria-hidden="true"></span>
 
       <!-- PREÇO -->
       <section id="preco" aria-labelledby="tit-preco">
@@ -198,10 +168,10 @@
           <div class="price">Baixo custo</div>
           <div><a class="btn btn-primary" href="#contato">Solicitar proposta</a></div>
         </div>
-        <div class="benefit-tip">🤝 <span>Sem curva de adoção: equipe <strong>produtiva desde o primeiro dia</strong>.</span></div>
+        <div class="callout">🤝 <span>Equipe <strong>produtiva desde o primeiro dia</strong>.</span></div>
       </section>
 
-      <div class="benefit-tip">🎟️ <span>Garanta prioridade no lançamento e <strong>condições especiais</strong>.</span></div>
+      <span class="divider" aria-hidden="true"></span>
 
       <!-- AVISO / CAPTURA -->
       <section id="aviso" aria-labelledby="tit-aviso">
@@ -216,7 +186,7 @@
         <p class="lead" style="font-size:14px;color:#6b7280;margin-top:6px">Prometemos não enviar spam. Você pode pedir a remoção a qualquer momento.</p>
       </section>
 
-      <div class="benefit-tip">🛟 <span>Tire dúvidas e avance com <strong>segurança</strong>.</span></div>
+      <span class="divider" aria-hidden="true"></span>
 
       <!-- FAQ -->
       <section aria-labelledby="tit-faq">
@@ -239,19 +209,7 @@
         </details>
       </section>
 
-      <div class="benefit-tip">🏁 <span>Pronto para dar o próximo passo? <strong>Leve o NewsFlow</strong> para sua equipe.</span></div>
-
-      <!-- CONTATO -->
-      <section id="contato" aria-labelledby="tit-contato">
-        <h2 id="tit-contato">Contato</h2>
-        <p class="lead">Entre em contato e conheça o NewsFlow.</p>
-        <div style="display:flex;gap:10px;flex-wrap:wrap">
-          <a class="btn btn-primary" href="https://wa.me/5599999999999?text=Quero%20conhecer%20o%20NewsFlow" target="_blank" rel="noopener">Falar no WhatsApp</a>
-          <a class="btn btn-ghost" href="mailto:contato@newsflow.com.br?subject=Quero%20conhecer%20o%20NewsFlow">contato@newsflow.com.br</a>
-        </div>
-      </section>
-
-      <footer style="margin-top:24px;padding-top:16px;border-top:1px solid var(--nf-border);color:#6b7280">
+      <footer style="margin-top:28px;padding-top:16px;border-top:1px solid var(--nf-border);color:#6b7280">
         <div class="container" style="display:flex;justify-content:space-between;gap:12px;flex-wrap:wrap">
           <span>© <span id="year"></span> NewsFlow — Todos os direitos reservados.</span>
           <span><a href="#sobre">Sobre</a> • <a href="#recursos">Recursos</a> • <a href="#integracoes">Integrações</a> • <a href="#preco">Preços</a> • <a href="#contato">Contato</a></span>
@@ -261,7 +219,7 @@
     </div>
   </main>
 
-  <!-- FAB WhatsApp -->
+  <!-- CONTATO (fixo) -->
   <a class="fab" href="https://wa.me/5599999999999?text=Quero%20conhecer%20o%20NewsFlow" target="_blank" rel="noopener" aria-label="Falar no WhatsApp">WhatsApp</a>
   <button id="totop" aria-label="Voltar ao topo">↑</button>
 
