--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     /* Topbar */
     .topbar{position:sticky;top:0;z-index:1000;display:flex;align-items:center;justify-content:center;height:72px;background:var(--nf-header);color:#fff;box-shadow:0 2px 10px rgba(0,0,0,.06)}
-    .topbar h1{margin:0;font-family:"Montserrat","Segoe UI",Roboto,Arial,sans-serif;font-weight:700;letter-spacing:.3px;font-size:clamp(24px,4.2vw,34px)}
+    .topbar h1{margin:0;font-family:"Montserrat","Segoe UI",Roboto,Arial,sans-serif;font-weight:700;letter-spacing:.3px;font-size:clamp(28px,5.8vw,44px)}
 
     /* Layout */
     .content{padding:32px 20px}
@@ -132,7 +132,7 @@
         <div class="banner">✨ Menos retrabalho, mais <strong>tempo no ar</strong>.</div>
       </section>
 
-      <div class="banner">🛟 Tire dúvidas e avance com <strong>segurança</strong>.</div>nçamento e <strong>condições especiais</strong>.</div>g>pague pelo que usar</strong>.</div>m <strong>OBS e vMix</strong> sem retrabalho.</div>ganhe <strong>agilidade</strong> na redação.</div>
+      <div class="banner">⚡ Centralize sua produção e ganhe <strong>agilidade</strong> na redação.</div>
 
       <!-- RECURSOS -->
       <section id="recursos" aria-labelledby="tit-recursos">
@@ -148,7 +148,7 @@
         </div>
       </section>
 
-      <span class="divider" aria-hidden="true"></span>
+      <div class="banner">🔌 Integre tarjas e telas com <strong>OBS e vMix</strong> sem retrabalho.</div>
 
       <!-- INTEGRAÇÕES -->
       <section id="integracoes" aria-labelledby="tit-integracoes">
@@ -163,7 +163,7 @@
         </div>
       </section>
 
-      <span class="divider" aria-hidden="true"></span>
+      <div class="banner">💸 Planos sob medida: <strong>pague pelo que usar</strong>.</div>
 
       <!-- PREÇO -->
       <section id="preco" aria-labelledby="tit-preco">
@@ -178,7 +178,7 @@
         <div class="callout">🤝 <span>Equipe <strong>produtiva desde o primeiro dia</strong>.</span></div>
       </section>
 
-      <span class="divider" aria-hidden="true"></span>
+      <div class="banner">🎟️ Garanta prioridade no lançamento e <strong>condições especiais</strong>.</div>
 
       <!-- AVISO / CAPTURA -->
       <section id="aviso" aria-labelledby="tit-aviso">
@@ -193,7 +193,7 @@
         <p class="lead" style="font-size:14px;color:#6b7280;margin-top:6px">Prometemos não enviar spam. Você pode pedir a remoção a qualquer momento.</p>
       </section>
 
-      <span class="divider" aria-hidden="true"></span>
+      <div class="banner">🛟 Tire dúvidas e avance com <strong>segurança</strong>.</div>
 
       <!-- FAQ -->
       <section aria-labelledby="tit-faq">
