--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="icon" href="/favicon.ico" />
   <style>
     :root{
-      --nf-blue:#2563eb;--nf-blue-dark:#1e3a8a;--nf-header:#1e40af;--nf-bg:#ffffff;--nf-surface:#ffffff;--nf-text:#1f2937;--nf-muted:#475569;--nf-border:#e5e7eb;--nf-soft:#f8fafc;--radius:16px;--shadow:0 10px 30px rgba(2,6,23,.08);--maxw:1040px
+      --nf-blue:#2563eb;--nf-blue-dark:#1e3a8a;--nf-header:#1e3a8a;--nf-bg:#ffffff;--nf-surface:#ffffff;--nf-text:#1f2937;--nf-muted:#475569;--nf-border:#e5e7eb;--nf-soft:#f8fafc;--radius:16px;--shadow:0 10px 30px rgba(2,6,23,.08);--maxw:1040px
     }
     *,*::before,*::after{box-sizing:border-box}
     html{scroll-behavior:smooth;text-size-adjust:100%}
@@ -29,11 +29,11 @@
 
     /* Topbar */
     .topbar{position:sticky;top:0;z-index:1000;display:flex;align-items:center;justify-content:center;height:72px;background:var(--nf-header);color:#fff;box-shadow:0 2px 10px rgba(0,0,0,.06)}
-    .topbar h1{margin:0;font-family:"Montserrat","Segoe UI",Roboto,Arial,sans-serif;font-weight:700;letter-spacing:.3px;font-size:clamp(28px,5.8vw,44px)}
+    .topbar h1{margin:0;font-family:"Montserrat","Segoe UI",Roboto,Arial,sans-serif;font-weight:700;letter-spacing:.3px;font-size:clamp(32px,6.4vw,48px)}
 
     /* Layout */
-    .content{padding:32px 20px}
-    .container{max-width:var(--maxw);margin:0 auto}
+    .content{padding:40px 24px}
+    .container{max-width:var(--maxw);margin:0 auto;padding-left:16px;padding-right:16px}
     section{margin:56px 0}
 
     /* Hero modernizado */
