--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     main{padding:36px 24px}
     .container{max-width:var(--w);margin:0 auto}
     .twocol{display:grid;grid-template-columns:1.08fr .92fr;gap:24px;align-items:center}
-    .twocol .media{border:1px solid var(--border);border-radius:22px;overflow:hidden;box-shadow:var(--shadow);background:#fff}
+    .twocol .media{border:1px solid var(--border);border-radius:12px;overflow:hidden;box-shadow:var(--shadow);background:#fff}
     .section{margin:56px 0}
     .eyebrow{display:inline-flex;align-items:center;gap:8px;background:#eef2ff;border:1px solid #dbeafe;color:#3730a3;padding:6px 10px;border-radius:999px;font-size:12px;font-weight:700;letter-spacing:.3px;text-transform:uppercase}
 
@@ -62,7 +62,12 @@
       .twocol{grid-template-columns:1fr;gap:16px}
       .topbar h1{font-size:clamp(32px,9vw,64px)}
     }
-  </style>
+  .span-2{grid-column:1 / -1}
+.cards-grid{grid-column:1 / -1;display:grid;grid-template-columns:repeat(2,1fr);gap:14px}
+.banner-media{display:grid;grid-template-columns:1.2fr .8fr;gap:16px;align-items:center}
+.banner-media img{width:100%;border-radius:12px;border:1px solid var(--border);box-shadow:var(--shadow)}
+@media (max-width:980px){.cards-grid{grid-template-columns:1fr}.banner-media{grid-template-columns:1fr}}
+</style>
 </head>
 <body>
   <div class="topbar"><h1>NewsFlow</h1></div>
@@ -73,7 +78,8 @@
       <!-- HERO: TÍTULO + PARÁGRAFO + IMAGEM (home) -->
       <section class="section">
         <div class="twocol">
-          <div>
+          <figure class="media span-2"><img src="home.png" alt="Tela inicial do NewsFlow (ilustração)"/></figure>
+          <div class="span-2">
             <span class="eyebrow">Lançamento em breve</span>
             <h2 style="margin:10px 0 6px">Redação e Telejornal em Tempo Real</h2>
             <p>O NewsFlow organiza o fluxo do telejornal, laudas, espelhos e TP, com controle de programas ao vivo e integração com OBS e vMix — ideal para pequenas TVs e webTVs que precisam de <strong>versatilidade e baixo custo</strong>.</p>
@@ -82,54 +88,52 @@
               <a class="btn" style="background:#fff;border:1px solid var(--border)" href="#aviso">Ser avisado no lançamento</a>
             </div>
           </div>
-          <figure class="media"><img src="home.png" alt="Tela inicial do NewsFlow (ilustração)"/></figure>
         </div>
       </section>
 
-      <div class="banner">✨ Menos retrabalho, mais tempo no ar</div>
-      <div class="banner">⚡ Centralize sua produção e ganhe agilidade na redação</div>
+      
+      <div class="banner banner-media"><div>⚡ Centralize sua produção e ganhe <strong>agilidade</strong> na redação</div><img src="espelho.png" alt="Espelho do jornal (ilustração)"/></div>
 
       <!-- FEITO PARA REDAÇÕES ÁGEIS + IMAGEM (menu reportagens) -->
       <section class="section">
         <div class="twocol">
-          <div>
+          <figure class="media span-2"><img src="menu%20reportagens.png" alt="Menu de módulos (ilustração)"/></figure>
+          <div class="span-2">
             <h2>Feito para redações ágeis</h2>
             <p>Colaboração em tempo real, impressão em PDF e integrações para ir ao ar sem estresse.</p>
-
-            <div class="features" style="margin-top:12px">
-              <article class="feature">
-                <h3>Fluxo de Telejornal</h3>
-                <p>Crie e organize <strong>laudas</strong>, <strong>espelhos</strong> e blocos com tempos, status e PDF.</p>
-                <div class="adv">⚡ Organize tudo em um só lugar e <strong>ganhe velocidade</strong>.</div>
-              </article>
-              <article class="feature">
-                <h3>Operação de TP</h3>
-                <p>Teleprompter integrado, controle por teclado, timers e conforto visual.</p>
-                <div class="adv">🎯 Mais segurança no ar e <strong>menos improviso</strong>.</div>
-              </article>
-              <article class="feature">
-                <h3>Ao vivo</h3>
-                <p>Contagem de VTs, sincronia entre redação e estúdio e visão do espelho.</p>
-                <div class="adv">📡 Ritmo do <strong>ao vivo</strong> com menos stress.</div>
-              </article>
-              <article class="feature">
-                <h3>Integrações</h3>
-                <p>Exporta GC/espelho (JSON, CSV, PDF) para <strong>OBS</strong> e <strong>vMix</strong>.</p>
-                <div class="adv">🔌 Reduza erros de GC com <strong>exportação direta</strong>.</div>
-              </article>
-              <article class="feature">
-                <h3>Multi‑dispositivo</h3>
-                <p>Funciona bem em celular, tablet e desktop — no estúdio ou em externa.</p>
-                <div class="adv">📱 Trabalhe no que você já tem: <strong>sem compras caras</strong>.</div>
-              </article>
-              <article class="feature">
-                <h3>Licenciamento Acessível</h3>
-                <p>Implantação simples para emissoras enxutas e projetos independentes.</p>
-                <div class="adv">💸 Pague menos e <strong>mantenha o essencial</strong>.</div>
-              </article>
-            </div>
           </div>
-          <figure class="media"><img src="menu%20reportagens.png" alt="Menu de módulos (ilustração)"/></figure>
+          <div class="cards-grid">
+            <article class="feature">
+              <h3>Fluxo de Telejornal</h3>
+              <p>Crie e organize <strong>laudas</strong>, <strong>espelhos</strong> e blocos com tempos, status e PDF.</p>
+              <div class="adv">⚡ Organize tudo em um só lugar e <strong>ganhe velocidade</strong>.</div>
+            </article>
+            <article class="feature">
+              <h3>Operação de TP</h3>
+              <p>Teleprompter integrado, controle por teclado, timers e conforto visual.</p>
+              <div class="adv">🎯 Mais segurança no ar e <strong>menos improviso</strong>.</div>
+            </article>
+            <article class="feature">
+              <h3>Ao vivo</h3>
+              <p>Contagem de VTs, sincronia entre redação e estúdio e visão do espelho.</p>
+              <div class="adv">📡 Ritmo do <strong>ao vivo</strong> com menos stress.</div>
+            </article>
+            <article class="feature">
+              <h3>Integrações</h3>
+              <p>Exporta GC/espelho (JSON, CSV, PDF) para <strong>OBS</strong> e <strong>vMix</strong>.</p>
+              <div class="adv">🔌 Reduza erros de GC com <strong>exportação direta</strong>.</div>
+            </article>
+            <article class="feature">
+              <h3>Multi‑dispositivo</h3>
+              <p>Funciona bem em celular, tablet e desktop — no estúdio ou em externa.</p>
+              <div class="adv">📱 Trabalhe no que você já tem: <strong>sem compras caras</strong>.</div>
+            </article>
+            <article class="feature">
+              <h3>Licenciamento Acessível</h3>
+              <p>Implantação simples para emissoras enxutas e projetos independentes.</p>
+              <div class="adv">💸 Pague menos e <strong>mantenha o essencial</strong>.</div>
+            </article>
+          </div>
         </div>
       </section>
 
@@ -141,24 +145,7 @@
           <div>
             <h2>Integrações que facilitam o ar</h2>
             <ul class="list">
-              <li><strong>OBS Studio</strong>: uso de fontes dinâmicas com dados do espelho/GC.</li>
-              <li><strong>vMix</strong>: export de GC e cenas a partir do espelho.</li>
-              <li><strong>JSON/CSV/PDF</strong>: interoperabilidade simples com outros fluxos.</li>
-            </ul>
-          </div>
-          <figure class="media"><img src="espelho.png" alt="Visualização de espelho do jornal (ilustração)"/></figure>
-        </div>
-      </section>
-
-      <div class="banner">💸 Baixo custo e alta produtividade</div>
-
-      <!-- PLANOS + IMAGEM (pautas) -->
-      <section class="section">
-        <div class="twocol">
-          <div>
-            <ul class="list">
-              <li>💸 <strong>Baixo custo</strong> para pequenas TVs e webTVs.</li>
-              <li>📄 <strong>Solicitar proposta</strong> — <a class="btn btn-primary" href="#contato" style="margin-left:6px">Solicitar proposta</a></li>
+              
               <li>🤝 <strong>Equipe produtiva desde o primeiro dia.</strong></li>
               <li>🎟️ <strong>Garanta prioridade no lançamento e condições especiais.</strong></li>
             </ul>
